@@ -12,7 +12,8 @@
 * upgraded to OGNL 3.0, Paranamer 2.2.1, MVEL 2.0.18, Groovy 1.7.4, Spring 3.0.4.RELEASE, JRuby 1.5.2, AspectJ 1.6.9, SLF4J 1.6.1, log4j 1.2.16 
 + Validator now eagerly checks Java SecurityManager configuration for suppressAccessChecks ReflectionPermission during instantiation
 + added @<Constraint>.List annotations that can hold multiple constraint annotations of the same type
-
++ added @Email(allowPersonalName=true/false) (thanks to Eric Lewis)
+ 
 2010-03-29 v1.50
 ================
 * upgraded to AspectJ 1.6.8, JUnit 4.8.1, SLF4J 1.5.11, MVEL 2.0.16, Paranamer 2.2, JRuby 1.4.0
